--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
       id: cached-results
       run: |
           CACHE_RESULT_STAMP="${{ github.workspace }}/.test-results/snap-build-success"
-          echo "::set-env name=CACHE_RESULT_STAMP::$CACHE_RESULT_STAMP"
+          echo "CACHE_RESULT_STAMP=$CACHE_RESULT_STAMP" >> $GITHUB_ENV
           if [ -e "$CACHE_RESULT_STAMP" ]; then
               has_cached_snap=0
               while read name; do
@@ -110,7 +110,7 @@ jobs:
       id: cached-results
       run: |
           CACHE_RESULT_STAMP="${{ github.workspace }}/.test-results/${{ matrix.gochannel }}-success"
-          echo "::set-env name=CACHE_RESULT_STAMP::$CACHE_RESULT_STAMP"
+          echo "CACHE_RESULT_STAMP=$CACHE_RESULT_STAMP" >> $GITHUB_ENV
           if [ -e "$CACHE_RESULT_STAMP" ]; then
               echo "::set-output name=already-ran::true"
           fi
@@ -219,7 +219,7 @@ jobs:
       id: cached-results
       run: |
           CACHE_RESULT_STAMP="${{ github.workspace }}/.test-results/${{ matrix.system }}-success"
-          echo "::set-env name=CACHE_RESULT_STAMP::$CACHE_RESULT_STAMP"
+          echo "CACHE_RESULT_STAMP=$CACHE_RESULT_STAMP" >> $GITHUB_ENV
           if [ -e "$CACHE_RESULT_STAMP" ]; then
               echo "::set-output name=already-ran::true"
           fi
@@ -271,7 +271,7 @@ jobs:
       id: cached-results
       run: |
           CACHE_RESULT_STAMP="${{ github.workspace }}/.test-results/${{ matrix.system }}-nested-success"
-          echo "::set-env name=CACHE_RESULT_STAMP::$CACHE_RESULT_STAMP"
+          echo "CACHE_RESULT_STAMP=$CACHE_RESULT_STAMP" >> $GITHUB_ENV
           if [ -e "$CACHE_RESULT_STAMP" ]; then
               echo "::set-output name=already-ran::true"
           fi
